<resources>

	<string name="app_name">Padder</string>

	<string name="login_activity_title">LoginActivity</string>
	<string name="login_title">Sign up or login to find your dream pad</string>
	<string name="login_username">Username</string>
	<string name="login_password">Password</string>
	<string name="login_signup_button">Sign Up</string>
	<string name="login_login_button">Login</string>
	<string name="sting">Police</string>

	<string name="home_activity_title">HomeActivity</string>

	<string name="title_loading">Loading &#8230; please wait</string>

</resources>
