<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/login_layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:gravity="center_vertical"
	tools:context=".LoginActivity">

	<ImageView
		android:id="@+id/login_logo"
		android:layout_width="fill_parent"
		android:layout_height="100dp"
		android:src="@drawable/padder_logo"/>

	<TextView
		android:id="@+id/login_title"
		android:layout_below="@id/login_logo"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:text="@string/login_title"/>

	<Space
		android:id="@+id/login_space"
		android:layout_below="@id/login_title"
		android:layout_width="wrap_content"
		android:layout_height="50dp"/>

	<EditText
		android:id="@+id/login_username"
		android:layout_below="@id/login_space"
		android:layout_width="250dp"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:inputType="text"
		android:hint="@string/login_username"/>

	<EditText
		android:id="@+id/login_password"
		android:layout_below="@id/login_username"
		android:layout_width="250dp"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:inputType="textPassword"
		android:hint="@string/login_password"/>

	<LinearLayout
		android:layout_below="@id/login_password"
		android:layout_width="250dp"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:orientation="horizontal">

		<RelativeLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_gravity="start"
			android:gravity="center">

			<Button
				android:id="@+id/login_signup_button"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/login_signup_button"/>

		</RelativeLayout>


		<RelativeLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_gravity="end"
			android:gravity="center">

			<Button
				android:id="@+id/login_login_button"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/login_login_button"/>

		</RelativeLayout>

	</LinearLayout>

</RelativeLayout>
